# sshm-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: homebrew.yml  pages.yml  release.yml
docs/: competitive-analysis.md  sshm-term-mvp-stories.md
docs/adr/: ADR-003-sshm-term-companion-app.md  ADR-004-tui-redesign-list-layout.md  ADR-005-update-notification-system.md  ADR-006-mono-binary-merge.md
docs/research/: pty-terminal-emulation-crates.md  sftp-browser-architecture.md  terminal-sftp-apps-comparison.md
packaging/homebrew/: sshm-rs.rb
packaging/winget/: bit5hift.sshm-rs.yaml
site/: index.html
src/: favorites.rs  main.rs  snippets.rs  theme.rs
src/cli/: mod.rs
src/config/: mod.rs  parser.rs  paths.rs
src/connectivity/: mod.rs
src/credentials/: mod.rs
src/history/: mod.rs
src/term/: app.rs  event.rs  mod.rs  sftp.rs  ssh.rs  transfer.rs  ui.rs
src/ui/: app.rs  event.rs  mod.rs  styles.rs
src/ui/views/: help.rs  list.rs
src/update/: mod.rs
