[package]
name = "sshm-rs"
version = "0.1.0-beta.1"
edition = "2021"
description = "A beautiful TUI SSH connection manager, inspired by https://github.com/Gu1llaum-3/sshm"
license = "MIT"
repository = "https://github.com/joseph-maia/sshm-rs"
default-run = "sshm-rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# CLI
clap = { version = "4", features = ["derive"] }

# SSH connectivity check
ssh2 = "0.9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utils
whoami = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
glob = "0.3"
anyhow = "1"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native"] }

[dev-dependencies]
tempfile = "3"
