[package]
name = "sshm-rs"
version = "0.1.0"
edition = "2021"
description = "A beautiful TUI SSH connection manager, inspired by https://github.com/Gu1llaum-3/sshm"
license = "MIT"
repository = "https://github.com/joseph-maia/sshm-rs"
default-run = "sshm-rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# SSH connectivity check
ssh2 = "0.9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Fuzzy matching
nucleo-matcher = "0.3"

# Clipboard
arboard = "3"

# Utils
whoami = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
glob = "0.3"
anyhow = "1"
rpassword = "7"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native"] }

# sshm-term: SSH terminal + SFTP browser companion binary
russh = { version = "0.57", default-features = false, features = ["ring"] }
russh-sftp = "2.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tui-term = "0.2"
tui-tree-widget = "0.24"
vt100 = "0.15"

[dev-dependencies]
tempfile = "3"
