[package]
name = "sshm-rs"
version = "0.1.0"
edition = "2021"
description = "A beautiful TUI SSH connection manager written in Rust"
license = "MIT"
repository = "https://github.com/bit5hift/sshm-rs"
homepage = "https://bit5hift.github.io/sshm-rs/"
default-run = "sshm-rs"

[[bin]]
name = "sshm-rs"
path = "src/main.rs"

[dependencies]
# OpenSSL (vendored to avoid system dependency issues in CI)
openssl = { version = "0.10", features = ["vendored"] }

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# SSH connectivity check
ssh2 = "0.9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Fuzzy matching
nucleo-matcher = "0.3"

# Clipboard
arboard = "3"

# Utils
whoami = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
glob = "0.3"
anyhow = "1"
rpassword = "7"
ureq = { version = "3", features = ["json"] }
semver = "1"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native"] }

# SSH terminal + SFTP browser (integrated term subcommand)
russh = { version = "0.57", default-features = false, features = ["ring"] }
russh-sftp = "2.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tui-term = "0.2"
vt100 = "0.15"

[dev-dependencies]
tempfile = "3"
